Fix credit modal displaying behind backdrop

--- a/src/CSBill/CoreBundle/Resources/public/less/styles.less
+++ b/src/CSBill/CoreBundle/Resources/public/less/styles.less
@@ -136,6 +136,10 @@ ul.unstyled {
     position: fixed;
 }
 
+.modal-scrollable {
+  z-index: 10;
+}
+
 #payment-method-tabs {
   overflow: scroll;
   height: 95%;
